--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "vconsole": "^3.3.4",
+    "vue": "^2.6.10",
+    "vue-eslint-parser": "^7.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
